--- a/cell-annotation.html
+++ b/cell-annotation.html
@@ -1530,10 +1530,9 @@ renv::load(project_root)</code></pre>
   library(SingleCellExperiment)
   library(SingleR)
   library(celldex)
-  library(scRNAseq)
 })
 
-set.seed(params$seed)</code></pre>
+set.seed(params$seed) # unclear if this is doing anything? probably not. but maybe later!</code></pre>
 <pre class="r"><code>utils_dir &lt;- file.path(project_root, &quot;scripts&quot;, &quot;utils&quot;)
 
 # source the helper functions to grab the integration method check
@@ -1761,75 +1760,75 @@ Blueprint/ENCODE to do particularly well anyways!</p>
 ## other attached packages:
 ##  [1] ensembldb_2.20.2            AnnotationFilter_1.20.0    
 ##  [3] GenomicFeatures_1.48.3      AnnotationDbi_1.58.0       
-##  [5] magrittr_2.0.3              scRNAseq_2.10.0            
-##  [7] celldex_1.6.0               SingleR_1.10.0             
-##  [9] SingleCellExperiment_1.18.0 SummarizedExperiment_1.26.1
-## [11] Biobase_2.56.0              GenomicRanges_1.48.0       
-## [13] GenomeInfoDb_1.32.3         IRanges_2.30.0             
-## [15] S4Vectors_0.34.0            BiocGenerics_0.42.0        
-## [17] MatrixGenerics_1.8.1        matrixStats_0.62.0         
+##  [5] magrittr_2.0.3              celldex_1.6.0              
+##  [7] SingleR_1.10.0              SingleCellExperiment_1.18.0
+##  [9] SummarizedExperiment_1.26.1 Biobase_2.56.0             
+## [11] GenomicRanges_1.48.0        GenomeInfoDb_1.32.3        
+## [13] IRanges_2.30.0              S4Vectors_0.34.0           
+## [15] BiocGenerics_0.42.0         MatrixGenerics_1.8.1       
+## [17] matrixStats_0.62.0         
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] AnnotationHub_3.4.0           BiocFileCache_2.4.0          
-##   [3] lazyeval_0.2.2                splines_4.2.1                
-##   [5] BiocParallel_1.30.3           ggplot2_3.3.6                
-##   [7] digest_0.6.29                 htmltools_0.5.3              
-##   [9] viridis_0.6.2                 fansi_1.0.3                  
-##  [11] memoise_2.0.1                 ScaledMatrix_1.4.0           
-##  [13] tzdb_0.3.0                    Biostrings_2.64.0            
-##  [15] miQC_1.4.0                    readr_2.1.2                  
-##  [17] vroom_1.5.7                   prettyunits_1.1.1            
-##  [19] colorspace_2.0-3              blob_1.2.3                   
-##  [21] rappdirs_0.3.3                xfun_0.32                    
-##  [23] dplyr_1.0.9                   crayon_1.5.1                 
-##  [25] RCurl_1.98-1.8                jsonlite_1.8.0               
-##  [27] glue_1.6.2                    gtable_0.3.0                 
-##  [29] zlibbioc_1.42.0               XVector_0.36.0               
-##  [31] DelayedArray_0.22.0           BiocSingular_1.12.0          
-##  [33] scales_1.2.0                  pheatmap_1.0.12              
-##  [35] DBI_1.1.3                     Rcpp_1.0.9                   
-##  [37] viridisLite_0.4.0             xtable_1.8-4                 
-##  [39] progress_1.2.2                bit_4.0.4                    
-##  [41] rsvd_1.0.5                    httr_1.4.3                   
-##  [43] RColorBrewer_1.1-3            ellipsis_0.3.2               
-##  [45] modeltools_0.2-23             farver_2.1.1                 
-##  [47] pkgconfig_2.0.3               XML_3.99-0.10                
-##  [49] flexmix_2.3-18                nnet_7.3-17                  
-##  [51] sass_0.4.2                    dbplyr_2.2.1                 
-##  [53] utf8_1.2.2                    here_1.0.1                   
-##  [55] tidyselect_1.1.2              rlang_1.0.4                  
-##  [57] later_1.3.0                   munsell_0.5.0                
-##  [59] BiocVersion_3.15.2            tools_4.2.1                  
-##  [61] cachem_1.0.6                  cli_3.3.0                    
-##  [63] generics_0.1.3                RSQLite_2.2.15               
-##  [65] ExperimentHub_2.4.0           evaluate_0.16                
-##  [67] stringr_1.4.0                 fastmap_1.1.0                
-##  [69] yaml_2.3.5                    knitr_1.39                   
-##  [71] bit64_4.0.5                   purrr_0.3.4                  
-##  [73] KEGGREST_1.36.3               sparseMatrixStats_1.8.0      
-##  [75] mime_0.12                     xml2_1.3.3                   
-##  [77] biomaRt_2.52.0                compiler_4.2.1               
-##  [79] rstudioapi_0.13               filelock_1.0.2               
-##  [81] curl_4.3.2                    png_0.1-7                    
-##  [83] interactiveDisplayBase_1.34.0 tibble_3.1.8                 
-##  [85] bslib_0.4.0                   stringi_1.7.8                
-##  [87] highr_0.9                     lattice_0.20-45              
-##  [89] ProtGenerics_1.28.0           Matrix_1.4-1                 
-##  [91] vctrs_0.4.1                   pillar_1.8.0                 
-##  [93] lifecycle_1.0.1               BiocManager_1.30.18          
-##  [95] jquerylib_0.1.4               BiocNeighbors_1.14.0         
-##  [97] bitops_1.0-7                  irlba_2.3.5                  
-##  [99] httpuv_1.6.5                  rtracklayer_1.56.1           
-## [101] R6_2.5.1                      BiocIO_1.6.0                 
-## [103] promises_1.2.0.1              renv_0.15.5                  
-## [105] gridExtra_2.3                 codetools_0.2-18             
-## [107] assertthat_0.2.1              rprojroot_2.0.3              
-## [109] rjson_0.2.21                  GenomicAlignments_1.32.1     
-## [111] Rsamtools_2.12.0              GenomeInfoDbData_1.2.8       
-## [113] parallel_4.2.1                hms_1.1.1                    
-## [115] grid_4.2.1                    beachmat_2.12.0              
-## [117] rmarkdown_2.14                DelayedMatrixStats_1.18.0    
-## [119] shiny_1.7.2                   restfulr_0.0.15</code></pre>
+##   [1] colorspace_2.0-3              rjson_0.2.21                 
+##   [3] ellipsis_0.3.2                modeltools_0.2-23            
+##   [5] rprojroot_2.0.3               XVector_0.36.0               
+##   [7] BiocNeighbors_1.14.0          rstudioapi_0.13              
+##   [9] farver_2.1.1                  flexmix_2.3-18               
+##  [11] bit64_4.0.5                   interactiveDisplayBase_1.34.0
+##  [13] fansi_1.0.3                   xml2_1.3.3                   
+##  [15] codetools_0.2-18              splines_4.2.1                
+##  [17] sparseMatrixStats_1.8.0       cachem_1.0.6                 
+##  [19] knitr_1.39                    jsonlite_1.8.0               
+##  [21] Rsamtools_2.12.0              dbplyr_2.2.1                 
+##  [23] png_0.1-7                     pheatmap_1.0.12              
+##  [25] shiny_1.7.2                   BiocManager_1.30.18          
+##  [27] readr_2.1.2                   compiler_4.2.1               
+##  [29] httr_1.4.3                    lazyeval_0.2.2               
+##  [31] assertthat_0.2.1              Matrix_1.4-1                 
+##  [33] fastmap_1.1.0                 cli_3.3.0                    
+##  [35] later_1.3.0                   BiocSingular_1.12.0          
+##  [37] prettyunits_1.1.1             miQC_1.4.0                   
+##  [39] htmltools_0.5.3               tools_4.2.1                  
+##  [41] rsvd_1.0.5                    gtable_0.3.0                 
+##  [43] glue_1.6.2                    GenomeInfoDbData_1.2.8       
+##  [45] dplyr_1.0.9                   rappdirs_0.3.3               
+##  [47] Rcpp_1.0.9                    jquerylib_0.1.4              
+##  [49] vctrs_0.4.1                   Biostrings_2.64.0            
+##  [51] rtracklayer_1.56.1            ExperimentHub_2.4.0          
+##  [53] DelayedMatrixStats_1.18.0     xfun_0.32                    
+##  [55] stringr_1.4.0                 beachmat_2.12.0              
+##  [57] mime_0.12                     lifecycle_1.0.1              
+##  [59] irlba_2.3.5                   restfulr_0.0.15              
+##  [61] renv_0.15.5                   XML_3.99-0.10                
+##  [63] AnnotationHub_3.4.0           zlibbioc_1.42.0              
+##  [65] scales_1.2.0                  vroom_1.5.7                  
+##  [67] ProtGenerics_1.28.0           hms_1.1.1                    
+##  [69] promises_1.2.0.1              parallel_4.2.1               
+##  [71] RColorBrewer_1.1-3            yaml_2.3.5                   
+##  [73] curl_4.3.2                    gridExtra_2.3                
+##  [75] memoise_2.0.1                 ggplot2_3.3.6                
+##  [77] sass_0.4.2                    biomaRt_2.52.0               
+##  [79] stringi_1.7.8                 RSQLite_2.2.15               
+##  [81] highr_0.9                     BiocVersion_3.15.2           
+##  [83] BiocIO_1.6.0                  ScaledMatrix_1.4.0           
+##  [85] filelock_1.0.2                BiocParallel_1.30.3          
+##  [87] rlang_1.0.4                   pkgconfig_2.0.3              
+##  [89] bitops_1.0-7                  evaluate_0.16                
+##  [91] lattice_0.20-45               purrr_0.3.4                  
+##  [93] GenomicAlignments_1.32.1      bit_4.0.4                    
+##  [95] tidyselect_1.1.2              here_1.0.1                   
+##  [97] R6_2.5.1                      generics_0.1.3               
+##  [99] DelayedArray_0.22.0           DBI_1.1.3                    
+## [101] pillar_1.8.0                  KEGGREST_1.36.3              
+## [103] RCurl_1.98-1.8                nnet_7.3-17                  
+## [105] tibble_3.1.8                  crayon_1.5.1                 
+## [107] utf8_1.2.2                    BiocFileCache_2.4.0          
+## [109] tzdb_0.3.0                    rmarkdown_2.14               
+## [111] viridis_0.6.2                 progress_1.2.2               
+## [113] grid_4.2.1                    blob_1.2.3                   
+## [115] digest_0.6.29                 xtable_1.8-4                 
+## [117] httpuv_1.6.5                  munsell_0.5.0                
+## [119] viridisLite_0.4.0             bslib_0.4.0</code></pre>
 </div>
 
 
